--- a/css/colors.css
+++ b/css/colors.css
@@ -1,5 +1,5 @@
 :root {
 	--nav: #232840;
-	--funky-button-static: #f6c113;
-	--funky-button-hover: #00a3f7;
+	--funky-static: #f6c113;
+	--funky-hover: #00a3f7;
 }
