html editor integrated

--- a/css/animations.css
+++ b/css/animations.css
@@ -1,6 +1,8 @@
 :root {
 	--animation-speed: 0.7s;
 	--initial-delay: 0.4s;
+	--after-nav-delay: 0.4s;
+	--animation-increment: 0.2s;
 }
 
 
@@ -35,32 +37,56 @@
 
 
 
-/* General */
-.nav {
+/* web-Editor */
+.web-body .nav {
 	animation: fadeDown var(--animation-speed) forwards;
 	animation-delay: var(--initial-delay);
 	opacity: 0;
 }
 
-
-
-/* Editor */
-.code-box {
+.web-body .code-box {
 	animation: fadeUp var(--animation-speed) forwards;
 	opacity: 0;
 }
-.html {animation-delay: calc(var(--initial-delay) + 0.6s);}
-.css {animation-delay: calc(var(--initial-delay) + 0.8s);}
-.js {animation-delay: calc(var(--initial-delay) + 1.0s);}
+.web-body .html {animation-delay: calc(var(--initial-delay) + var(--after-nav-delay) + var(--animation-increment));}
+.web-body .css {animation-delay: calc(var(--initial-delay) + var(--after-nav-delay) + 2 * var(--animation-increment));}
+.web-body .js {animation-delay: calc(var(--initial-delay) + var(--after-nav-delay) + 3 * var(--animation-increment));}
 
-.result-container {
+.web-body .result-container {
 	animation: fadeUp var(--animation-speed) forwards;
-	animation-delay: calc(var(--initial-delay) + 1.2s);
+	animation-delay: calc(var(--initial-delay) + var(--after-nav-delay) + 4 * var(--animation-increment));
 	opacity: 0;
 }
 
-.gutter-horizontal {
+.web-body .gutter-horizontal {
 	animation: fadeIn var(--animation-speed) forwards;
-	animation-delay: calc(var(--initial-delay) + 1.4s);
+	animation-delay: calc(var(--initial-delay) + var(--after-nav-delay) + 5 * var(--animation-increment));
+	opacity: 0;
+}
+
+
+
+/* HTML Editor */
+.html-body .nav {
+	animation: fadeDown var(--animation-speed) forwards;
+	animation-delay: var(--initial-delay);
+	opacity: 0;
+}
+
+.html-body .html {
+	animation: fadeUp var(--animation-speed) forwards;
+	animation-delay: calc(var(--initial-delay) + var(--after-nav-delay));
+	opacity: 0;
+}
+
+.html-body .result-container {
+	animation: fadeUp var(--animation-speed) forwards;
+	animation-delay: calc(var(--initial-delay) + var(--after-nav-delay) + var(--animation-increment));
+	opacity: 0;
+}
+
+.html-body .gutter-horizontal {
+	animation: fadeIn var(--animation-speed) forwards;
+	animation-delay: calc(var(--initial-delay) + var(--after-nav-delay) + 2 * var(--animation-increment));
 	opacity: 0;
 }
