--- a/css/layouts.css
+++ b/css/layouts.css
@@ -3,7 +3,7 @@
 	display: flex;
 	justify-content: center;
 	align-items: center;
-	width: calc(100%/3);
+	width: calc(100% / 3);
 	padding: 10px 0;
 	border-radius: var(--small-radius);
 	opacity: 0.5;
@@ -17,7 +17,7 @@ input[name="layout"]:checked + .layout {
 
 .layout-icon {
 	--a: 34px;
-	--b: calc(var(--a)*0.07);
+	--b: calc(var(--a) * 0.07);
 	position: relative;
 	height: var(--a);
 	width: var(--a);
@@ -46,9 +46,9 @@ input[name="layout"]:checked + .layout {
 }
 .code-container .gutter-vertical {
 	height: var(--gutter-margin) !important;
-	width: calc(100% - var(--gutter-margin)*4);
+	width: calc(100% - 2 * var(--gutter-margin));
 	margin: var(--gutter-margin) 0;
-	margin-left: 8px;
+	margin-left: var(--gutter-margin);
 	border-radius: 999px;
 	background: rgba(0,0,0,0.15);
 	cursor: row-resize;
@@ -68,8 +68,8 @@ input[name="layout"]:checked + .layout {
 
 .layers .code-box {
 	position: absolute;
-	height: calc(100% - 2*var(--tab-height) + 8px);
-	width: calc(100% - 2*var(--tab-height) + 8px);
+	height: calc(100% - 2 * var(--tab-height) + 8px);
+	width: calc(100% - 2 * var(--tab-height) + 8px);
 	z-index: 1;
 }
 .layers .html {
@@ -83,8 +83,8 @@ input[name="layout"]:checked + .layout {
 
 .layers-icon span {
 	position: absolute;
-	height: calc(var(--a)*0.7);
-	width: calc(var(--a)*0.7);
+	height: calc(var(--a) * 0.7);
+	width: calc(var(--a) * 0.7);
 }
 .layers-icon span:nth-child(1) {
 	top: 0;
@@ -127,44 +127,44 @@ input[name="layout"]:checked + .layout {
 .boxes .code-box {position: absolute;}
 .boxes .code-box:nth-child(3) {
 	top: 0;
-	height: calc(50% - (var(--code-box-margin)/2));
+	height: calc(50% - (var(--code-box-margin) / 2));
 	width: 100%;
 }
 .boxes .code-box:nth-child(2) {
 	bottom: 0;
 	left: 0;
-	height: calc(50% - (var(--code-box-margin)/2));
-	width: calc(50% - (var(--code-box-margin)/2));
+	height: calc(50% - (var(--code-box-margin) / 2));
+	width: calc(50% - (var(--code-box-margin) / 2));
 }
 .boxes .code-box:nth-child(1) {
 	bottom: 0;
 	right: 0;
-	height: calc(50% - (var(--code-box-margin)/2));
-	width: calc(50% - (var(--code-box-margin)/2));
+	height: calc(50% - (var(--code-box-margin) / 2));
+	width: calc(50% - (var(--code-box-margin) / 2));
 }
 
 .boxes-icon span {position: absolute;}
 .boxes-icon span:nth-child(1) {
 	bottom: 0;
 	right: 0;
-	height: calc(50% - (var(--b)/2));
-	width: calc(50% - (var(--b)/2));
+	height: calc(50% - (var(--b) / 2));
+	width: calc(50% - (var(--b) / 2));
 }
 .boxes-icon span:nth-child(2) {
 	bottom: 0;
 	left: 0;
-	height: calc(50% - (var(--b)/2));
-	width: calc(50% - (var(--b)/2));
+	height: calc(50% - (var(--b) / 2));
+	width: calc(50% - (var(--b) / 2));
 }
 .boxes-icon span:nth-child(3) {
 	top: 0;
-	height: calc(50% - (var(--b)/2));
+	height: calc(50% - (var(--b) / 2));
 	width: 100%;
 }
 
 .box-cycler {
 	position: absolute;
-	top: calc(var(--half-padding) + (var(--tab-height) - var(--small-button-dimension))/2);
+	top: calc(var(--half-padding) + (var(--tab-height) - var(--small-button-dimension)) / 2);
 	display: none;
 	align-items: center;
 	height: var(--small-button-dimension);
