--- a/css/settings.css
+++ b/css/settings.css
@@ -1,16 +1,15 @@
-.settings {position: relative;}
-
 .settings-dropdown {
 	position: absolute;
-	right: 0;
+	right: var(--nav-padding);
+	bottom: 3px;
 	display: none;
 	flex-direction: column;
 	font-size: 15px;
 	padding: 15px;
-	margin-top: 5px;
-	background: white;
 	border-radius: var(--main-radius);
 	box-shadow: 0 0 25px rgba(0,0,0,0.3);
+	background: white;
+	transform: translateY(100%);
 	z-index: 999;
 }
 
