final fix before presentation

--- a/_includes/run-js.html
+++ b/_includes/run-js.html
@@ -21,8 +21,8 @@
 			},
 			error: function() {
 				log("<span class=\"log-error\">Error, possible loop</span>");
-
 			}
 		});
+		$("#console").scrollTop($("#console").outerHeight());
 	});
 </script>
