terminal clean ups

--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -1,6 +1,6 @@
 <div class="nav">
 	<div class="info-container">
-		<img class="logo" src="{{ site.baseurl }}/icons/logo.svg">
+		<img class="logo" src="{{ site.baseurl }}/img/logo.svg">
 		<span class="info-title">Welcome to Kokomo!</span>
 		<div class="info-dropdown">
 			<span>Kokomo {{ page.title }} Editor</span>
